refined update code

--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm">
     <mat-form-field>
-      <input matInput name="title" ngModel required placeholder="Place Content" #title="ngModel" />
+      <input matInput name="title" [ngModel]="post?.title" required placeholder="Place Content" #title="ngModel" />
       <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
     </mat-form-field>
     <mat-form-field>
@@ -9,7 +9,7 @@
         matInput
         rows="6"
         name="content"
-        ngModel
+        [ngModel]="post?.content"
         required
         placeholder="Post Content"
         #content="ngModel"
