--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,8 +1,12 @@
-<mat-accordion *ngIf="posts.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion *ngIf="posts.length > 0 && !isLoading">
 <mat-expansion-panel *ngFor="let post of posts">
   <mat-expansion-panel-header>
     {{post.title}}
   </mat-expansion-panel-header>
+  <div class="post-image">
+<img [src]="post.imagePath" [alt]="post.title">
+  </div>
   <p>{{post.content}}</p>
   <mat-action-row>
     <a mat-button color="primary" [routerLink]="['/edit', post.id]">Edit</a>
@@ -10,4 +14,4 @@
   </mat-action-row>
 </mat-expansion-panel>
 </mat-accordion>
-<p class="mat-body-1 info-text" *ngIf="posts.length <= 0">No posts</p>
+<p class="mat-body-1 info-text" *ngIf="posts.length <= 0  && !isLoading">No posts</p>
