--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -14,4 +14,5 @@
   </mat-action-row>
 </mat-expansion-panel>
 </mat-accordion>
+<mat-paginator [length]="totalPosts" [pageSize]="postsPerPage"></mat-paginator>
 <p class="mat-body-1 info-text" *ngIf="posts.length <= 0  && !isLoading">No posts</p>
